added highlighting to tags and note selection

--- a/frontend/src/components/feed/Feed.css
+++ b/frontend/src/components/feed/Feed.css
@@ -22,6 +22,12 @@
     background-color: yellowgreen;
 }
 
+.notelist-selector:focus {
+    background-color: yellowgreen;
+}
+
+
+
 
 
 /* column three */
