--- a/frontend/src/components/feed/Feed.css
+++ b/frontend/src/components/feed/Feed.css
@@ -37,8 +37,9 @@
 }
 
 .notes-display {
+    height: 525px;
     margin-top: 20px;
-    overflow: auto;
+    overflow-x: auto;
 }
 
 .col-2, .col-4, .col-6 {
